Variant update